test/errors/packages_error/zs/multiple_default_package_error.zs
// This is an error because default package cannot be imported to the another default package.
import default_package.*;
